[project]
name = "wcpan-drive-sqlite"
version = "2.1.0"
description = "sqlite3 snapshot service for wcpan.drive"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com"}
]
dynamic = ["classifiers", "dependencies", "requires-python"]

[project.urls]
source = "https://github.com/legnaleurc/wcpan.drive.sqlite"

[tool.poetry]
requires-poetry = "^2.1"
package-mode = true
packages = [{include = "wcpan"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
wcpan-drive-core = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
