[project]
name = "wcpan-drive-sqlite"
version = "2.1.0"
description = "sqlite3 snapshot service for wcpan.drive"
license = "MIT"
readme = "README.md"
authors = [
    {name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "wcpan-drive-core>=4.1.0,<5.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
source = "https://github.com/legnaleurc/wcpan.drive.sqlite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wcpan"]

[dependency-groups]
dev = [
    "ruff>=0.14.0,<1.0.0",
]
